--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [USER]
-RAW_DATA: C:\Users\alsherman\Desktop\PycharmProjects\firm_initiatives\ml_guild\raw_data
+RAW_DATA: C:\Users\[INSERT_USERNAME]\Desktop\PycharmProjects\firm_initiatives\ml_guild\raw_data
 
 [AUTOMATION]
 BASE_URL: http://www.annualreports.com
