--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,12 @@
 [USER]
-RAW_DATA: C:\Users\alsherman\Desktop\nlp_practicum_cohort1\raw_data
+RAW_DATA: C:\Users\alsherman\Desktop\PycharmProjects\firm_initiatives\ml_guild\raw_data
 
 [AUTOMATION]
 BASE_URL: http://www.annualreports.com
 COMPANY: southwest-airlines-co
 OUTPUT_DIR_PATH: ${USER:RAW_DATA}\${COMPANY}\raw_data
 SELENIUM_CHROMEDRIVER_PATH: ${USER:RAW_DATA}\chromedriver\chromedriver.exe
+
 
 [DOCX]
 IN_PROGRESS_PATH: ${USER:RAW_DATA}\${AUTOMATION:COMPANY}\in_progress
@@ -27,7 +28,8 @@ STACKOVERFLOW_CSV_NAME: Train.csv
 GENSIM_DICTIONARY_PATH: ${USER:RAW_DATA}/gensim/airline_dict.dict
 GENSIM_CORPUS_PATH: ${USER:RAW_DATA}/gensim/airline.mm
 SIMILARITY_INDEX: ${USER:RAW_DATA}/gensim/airline.index
-AIRLINE_CLEANED_TEXT_PATH: ${USER:RAW_DATA}/gensim/airline_cleaned_text.txt
+AIRLINE_MATCHED_TEXT_PATH: ${USER:RAW_DATA}/cleaned_text/airline_matched_text.txt
+AIRLINE_CLEANED_TEXT_PATH: ${USER:RAW_DATA}/cleaned_text/airline_cleaned_text.txt
 AIRLINE_ACRONYMS_FILEPATH: ${USER:RAW_DATA}/airline_acronyms.csv
 AIRLINE_LSI_MODEL_PATH: ${USER:RAW_DATA}/gensim/airline_lsi_model.
 AIRLINE_LDA_MODEL_PATH: ${USER:RAW_DATA}/gensim/airline_lda_model.
