--- a/config.ini
+++ b/config.ini
@@ -1,12 +1,11 @@
 [USER]
-RAW_DATA: C:\Users\alsherman\Desktop\PycharmProjects\firm_initiatives\ml_guild\raw_data
+RAW_DATA: C:\Users\[INSERT_USERNAME]\Desktop\PycharmProjects\firm_initiatives\ml_guild\raw_data
 
 [AUTOMATION]
 BASE_URL: http://www.annualreports.com
 COMPANY: southwest-airlines-co
 OUTPUT_DIR_PATH: ${USER:RAW_DATA}\${COMPANY}\raw_data
 SELENIUM_CHROMEDRIVER_PATH: ${USER:RAW_DATA}\chromedriver\chromedriver.exe
-
 
 [DOCX]
 IN_PROGRESS_PATH: ${USER:RAW_DATA}\${AUTOMATION:COMPANY}\in_progress
