--- a/.gitignore
+++ b/.gitignore
@@ -101,7 +101,14 @@ ENV/
 .mypy_cache/
 
 # nlp practicum content
-raw_data/
 .idea/
 project/logging/
+raw_data/ebay/
+raw_data/federal_open_demands/
+raw_data/nvidia-corporation/
+raw_data/oracle-corporation.zip
+raw_data/oracle-corporation/
+raw_data/sap-ag/
+raw_data/yahoo/
+
 
