--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [USER]
-RAW_DATA: C:\Users\[INSERT_USERNAME]\Desktop\nlp_practicum_cohort1\raw_data
+RAW_DATA: C:\Users\alsherman\Desktop\nlp_practicum_cohort1\raw_data
 
 [AUTOMATION]
 BASE_URL: http://www.annualreports.com
